--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -33,7 +33,7 @@
 \pdf_bookmarksopen false
 \pdf_bookmarksopenlevel 1
 \pdf_breaklinks false
-\pdf_pdfborder false
+\pdf_pdfborder true
 \pdf_colorlinks false
 \pdf_backref false
 \pdf_pdfusetitle true
