quitado lo de Myers/levenshtein de la presentación

--- a/Presentacion_10611066.lyx
+++ b/Presentacion_10611066.lyx
@@ -787,8 +787,7 @@ Encontrar términos clave: estadística y procesamiento de lenguaje natural
 
 \end_deeper
 \begin_layout Itemize
-Saber cuándo ha cambiado el contexto: Diferencia de Myers/Distancia de Levenshte
-in
+Saber cuándo ha cambiado el contexto
 \end_layout
 
 \begin_layout Itemize
